--- a/css/painel.css
+++ b/css/painel.css
@@ -4,6 +4,11 @@
     padding: 0;
 }
 
+.estilo-li{
+    background-color: white;
+    font-weight: bold;
+}
+
 body{
     height: 100vh;
 }
@@ -68,12 +73,30 @@ body{
 }
 
 .opcoes-menus li{
+    border-top: solid 1px white;
+    border-bottom: solid 1px white;
     list-style-type: none;
     display: flex;
     justify-content: flex-start;
     column-gap: 15px;
 }
+
+.opcoes-menus li:hover{
+    background-color: white;
+    font-weight: bold;
+}
+
+.opcoes-menus li.active a{
+    background-color: white;
+    font-weight: bold;
+}
+
+/* .opcoes-menus li:visited{
+    background-color: white;
+} */
+
 .opcoes-menus > li:last-child{
+    border: none;
     position: absolute;
     bottom: 0;
 }
@@ -83,6 +106,7 @@ body{
     font-size: 20px;
     text-decoration: none;
     white-space: pre-line;
+    color:black;
 }
 
 .opcoes-menus li img{
@@ -107,17 +131,59 @@ body{
     padding: 20px;
 }
 
-/* .header {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-end;
+.show_drawer{
+    height: 100%;
+    width: 300px;
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;  /* Animation */
+    padding-top: 60px;
+    color: white;
+}
 
-    background-color: beige;
-    border-radius: 10px;   
-    box-shadow: 0 4px 8px; 
-    /* position: relative;
-    left: 30%; } */ 
 
-/* .nav-bar{
-    padding: 25px;
-} */
+
+/*PAGINA HUB_CHAMADOS*/
+.drawer{
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    right: 0;
+    background-color: white;
+    overflow-x: hidden;
+    transition: 0.5s;  /* Animation */
+    padding-top: 60px;
+    color: black;
+}
+#overlay{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);  /* Cor preta com 70% de opacidade */
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;  /* Ajuste o z-index se necessário para que fique atrás do drawer */
+    display: none;  /* Inicialmente oculto */
+}
+
+.background-transparente{
+    /* height: 100vh;
+    width: 100%; */
+    z-index: 9;
+    background-color: transparent;
+}
+
+.btn_toggle_drawer{
+    /* transition: margin-right .5s;
+    padding: 20px;  */
+}
+
+
+
+/*=========================================================================================================================================*/
