--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ article.login .box-login{
         box-shadow: 10px 10px 5px #888888;
         padding: 0 2%; 
         width: 450px;
-        height: 450px;
+        height: 500px;
         background: #F1F0E8;
         display: flex;
         flex-direction: column;
@@ -173,6 +173,12 @@ article.login .box-login form {
 .alert-success{
         z-index: 100;
         color: red;
+}
+
+.alert.alert-danger{
+        height: 35px;
+        padding: 5px 5px;
+
 }
 
 /* ESTILO DA PAGINA DE CADASTRO*/
