--- a/css/painel.css
+++ b/css/painel.css
@@ -12,25 +12,28 @@
 
 body{
     height: 100vh;
+    background-color: #8ECAE6;
 }
 
 .menu-principal{
     display: flex;
     width: 100%;
     height: 100vh;
+    
 }
 
 .side-bar{
     display: flex;
+    position: fixed;
     flex-direction: column;
     align-items: center;
     column-gap: 20px;
 
     /* border-radius: 10px; */
     box-shadow: 0 4px 8px;
-    width: 15%;
+    width: 17rem;
     padding: 20px;
-    background: rgba(241, 240, 232, 0.63);
+    background: rgba(241, 240, 232);
     box-shadow: 0px 1px 26px -5px rgba(0, 0, 0, 0.70);
     height: 100%;
 }
@@ -122,17 +125,15 @@ body{
 
 .conteudo{
     box-sizing: border-box;
-    width: 85%;
+    width: 100%;
+    margin-left: 17rem;
     /* right: 30%; */
     /* padding: 30px; */
-    background: #8ECAE6;
-}
-
-.conteudo{
     display: flex;
     flex-direction: column;
     height: 100vh;
     padding: 20px;
+    
 }
 
 .show_drawer{
@@ -388,4 +389,27 @@ body{
     padding: 20px;
     background-color: white;
 }
+
+.header-row{
+    border: 1px 1px 1px black;
+}
+
+.conteudo_chamados{
+    /* overflow: auto; */
+}
+
+table {
+    width: 100%;
+    /* height: 200vh; */
+    border-collapse: collapse;
+}
+
+table, th, td{
+    border: 1px solid rgba(0, 0, 0, 0.297);
+}
+
+th, td {
+    padding: 8px 8px 8px 8px;
+}
+
 
