--- a/css/painel.css
+++ b/css/painel.css
@@ -442,7 +442,7 @@ body{
 
 .tabela-ajustada {
     font-size: 0.9em;
-    overflow-x: auto; /* Adiciona rolagem horizontal se necessário */
+    /* overflow-x: auto; */
 }
 .descricao-col {
     max-width: 200px; /* Ajuste este valor conforme necessário */
@@ -459,10 +459,11 @@ body{
 
 
 table {
-    /* width: 100%;
-    height: 100vh; */
+    max-width: 100%;
+    overflow: scroll;
+    /* table-layout: auto; */
     /* height: 200vh; */
-    border-collapse: collapse;
+    /* border-collapse: collapse; */
 }
 
 table, th, td{
@@ -476,7 +477,7 @@ th, td {
 
 table td a{
     text-decoration: none;
-    font-weight: 300;
+    /* font-weight: 300; */
 }
 
 /*============================================ESTILO DAS PAGINAS PAINEL ADMIN========================================================*/
